# pbl_redes_ii

./: .coverage  README.md  docker-compose.yaml  docker_a.dockerfile  docker_b.dockerfile  docker_c.dockerfile  passagens_a.json  passagens_b.json  passagens_c.json  pyproject.toml  requirements.txt
pbl_redes_ii/: app.py  server_a.py  server_b.py  server_c.py
pbl_redes_ii_z/: docker-compose.yaml  server_a.py  server_b.py  server_c.py
pbl_redes_ii_z/server_a/: Dockerfile  passagens_a.json  pyproject.toml  server_a.py
pbl_redes_ii_z/server_b/: Dockerfile  passagens_b.json  server_b.py
pbl_redes_ii_z/server_c/: Dockerfile  passagens_c.json  server_c.py
tests/: test_app.py  test_server.py
