[tool.poetry]
name = "pbl-redes-ii"
version = "0.1.0"
description = ""
authors = ["José Alberto <albertojunior521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.3"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 100
extend-exclude = ['migrations'] 

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run_a = 'fastapi dev pbl_redes_ii\server_a.py'
run_host_a = 'fastapi dev pbl_redes_ii_z\server_a\server_a.py --host 0.0.0.0 --port 8004'
run_b = 'fastapi dev pbl_redes_ii\server_b.py'
run_host_b = 'fastapi dev pbl_redes_ii_z\server_b\server_b.py --host 0.0.0.0 --port 8008'
run_c = 'fastapi dev pbl_redes_ii\server_c.py'
run_host_c = 'fastapi dev pbl_redes_ii_z\server_c\server_c.py --host 0.0.0.0 --port 8016'
pre_test = 'task lint'
test = 'pytest -s -x --cov=pbl_redes_ii -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


